--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -5,7 +5,7 @@
     padding: 80px;
     background-color: #f9f9f9;
     color: #191919;
-    min-height: 85vh;
+    min-height: 80vh;
   }
   
   .hero-text {
